// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter active components render properly 1`] = `
<div
  className="toolbar-pf-results row"
>
  <div
    className="col-sm-12"
  >
    <p
      className="filter-pf-active-label"
    >
      Active Filters:
    </p>
    <ul
      className="list-inline"
    >
      <li
        className=""
      >
        <span
          className="label label-info"
        >
          Name: John
          <a
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="pficon pficon-close"
            />
            <span
              className="sr-only"
            >
              Remove
            </span>
          </a>
        </span>
      </li>
      <li
        className=""
      >
        <span
          className="label label-info"
        >
          Address: Westford
          <a
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="pficon pficon-close"
            />
            <span
              className="sr-only"
            >
              Remove
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter categories renders properly 1`] = `
<div
  className="filter-pf form-group"
>
  <div
    className="filter-pf-fields"
  >
    <div
      className="input-group"
    >
      <div
        className="input-group-btn"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-default"
            disabled={false}
            id="filterFieldTypeMenu"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            Car
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Name
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Address
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              className="selected"
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="filter-pf-category-select"
      >
        <div
          className="filter-pf-select"
        >
          <div
            className="dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="filter-pf-select-dropdown dropdown-toggle btn btn-default"
              disabled={false}
              id="filterCategoryMenu"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              Subaru
               
              <span
                className="caret"
              />
            </button>
            <ul
              aria-labelledby="filterCategoryMenu"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                  title="Filter by Car Make"
                >
                  Filter by Car Make
                </a>
              </li>
              <li
                className="selected"
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Subaru
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Toyota
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="filter-pf-select"
        >
          <div
            className="dropdown btn-group"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="filter-pf-category-select-value filter-pf-select-dropdown dropdown-toggle btn btn-default"
              disabled={false}
              id="filterCategoryMenu"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              Outback
               
              <span
                className="caret"
              />
            </button>
            <ul
              aria-labelledby="filterCategoryMenu"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                  title="Filter by Car Model"
                >
                  Filter by Car Model
                </a>
              </li>
              <li
                className="selected"
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Outback
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Crosstrek
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Impreza
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter input renders properly 1`] = `
<div
  className="filter-pf form-group"
>
  <div
    className="filter-pf-fields"
  >
    <div
      className="input-group"
    >
      <div
        className="input-group-btn"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-default"
            disabled={false}
            id="filterFieldTypeMenu"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            Name
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className="selected"
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Name
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Address
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <input
        className="form-control"
        placeholder="Filter by Name"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Filter renders properly in a Toolbar 1`] = `
<div
  className="container-fluid"
>
  <div
    className="toolbar-pf row"
  >
    <div
      className="col-sm-12"
    >
      <form
        className="toolbar-pf-actions"
      >
        <div
          className="filter-pf form-group toolbar-pf-filter"
        >
          <div
            className="filter-pf-fields"
          >
            <div
              className="input-group"
            >
              <div
                className="input-group-btn"
              >
                <div
                  className="dropdown btn-group"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-default"
                    disabled={false}
                    id="filterFieldTypeMenu"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    type="button"
                  >
                    Name
                     
                    <span
                      className="caret"
                    />
                  </button>
                  <ul
                    aria-labelledby="filterFieldTypeMenu"
                    className="dropdown-menu"
                    role="menu"
                  >
                    <li
                      className="selected"
                      role="presentation"
                      style={undefined}
                    >
                      <a
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex="-1"
                      >
                        Name
                      </a>
                    </li>
                    <li
                      className=""
                      role="presentation"
                      style={undefined}
                    >
                      <a
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex="-1"
                      >
                        Address
                      </a>
                    </li>
                    <li
                      className=""
                      role="presentation"
                      style={undefined}
                    >
                      <a
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex="-1"
                      >
                        Birth Month
                      </a>
                    </li>
                    <li
                      className=""
                      role="presentation"
                      style={undefined}
                    >
                      <a
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="menuitem"
                        tabIndex="-1"
                      >
                        Car
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <input
                className="form-control"
                placeholder="Filter by Name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Filter select renders properly 1`] = `
<div
  className="filter-pf form-group"
>
  <div
    className="filter-pf-fields"
  >
    <div
      className="input-group"
    >
      <div
        className="input-group-btn"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-default"
            disabled={false}
            id="filterFieldTypeMenu"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            Birth Month
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Name
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Address
              </a>
            </li>
            <li
              className="selected"
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="filter-pf-select"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="filter-pf-select-dropdown dropdown-toggle btn btn-default"
            disabled={false}
            id="filterCategoryMenu"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            May
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="filterCategoryMenu"
            className="dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                January
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                February
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                March
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                April
              </a>
            </li>
            <li
              className="selected"
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                May
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                June
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                July
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                August
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                September
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                October
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                November
              </a>
            </li>
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                December
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
